[BUGFIX] Correct wrapping for icongroup with less

--- a/Resources/Public/Less/Theme/icongroup.less
+++ b/Resources/Public/Less/Theme/icongroup.less
@@ -86,7 +86,7 @@
 // Items
 .icongroup-item {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     margin: @icongroup-margin;
     width: 100%;
